# UniMCP

./: .gitignore  LICENSE  README.md  package.json
.claude/: CLAUDE.md
Documentation~/: getting-started.md
Editor/: UniMCP.Editor.asmdef
Editor/Chat/: ChatMessage.cs  ChatSessionData.cs  ClaudeProcess.cs  ManifestResolver.cs  MarkdownRenderer.cs
Editor/Logging/: UniMcpLogger.cs
Editor/PrefabHook/: BuiltinSkills.cs  PrefabGenerationPipeline.cs  PrefabHookExecutor.cs  PrefabMetadataExtractor.cs  PrefabScreenshot.cs  TreeGenerator.cs
Editor/Settings/: SkillStore.cs  UniMcpSettings.cs  UniMcpSkill.cs  UniMcpSkillFile.cs
Editor/Windows/: DockUtil.cs  PrefabGeneratorWindow.cs  PrefabTreePreviewWindow.cs  UniMcpAssetMenu.cs  UniMcpRunQueue.cs  UniMcpSettingsWindow.cs  UniMcpSkillExecutorWindow.cs  UniMcpSkillGeneratorWindow.cs  UniMcpWindow.cs
Samples~/ClaudeCode/: .mcp.json.template
Samples~/ClaudeCode/skills/prefab-inspector/: SKILL.md  conventions.template.md
Server~/: README.md  pyproject.toml
Server~/src/unimcp/: __init__.py
Tools~/: README.md  analyze_prefab.js  apply_convention.js  prefab_hook.js  rename_nested.js
