[project]
name = "unimcp"
version = "0.0.1"
description = "Python MCP server bridging MCP clients to the UniMCP Unity Editor package."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "UniMCP Contributors" }]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
unimcp = "unimcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unimcp"]
